Fixed mobile overflowing

--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -21,3 +21,7 @@
         bottom: 0 !important;
     }
 }
+
+.smolp {
+    padding: 0.800rem;
+  }
